deployment/v3/external/postgres/cluster/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: postgres
  namespace: postgres
spec:
  selector:
    istio: ingressgateway-internal
  servers:
  - port:
      number: 5432
      name: postgres
      protocol: TCP
    hosts:
    - api-internal.sandbox.xyz.net
