deployment/v3/external/postgres/cluster/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: postgres-postgresql
  namespace: postgres
spec:
  hosts:
    - "*"
  gateways:
  - istio-system/internal
  tcp:
  - match:
    - port: 5432
    route:
    - destination:
        host: postgres-postgresql
        port:
          number: 5432
